2012-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52028
	* tree-loop-distribution.c (ldist_gen): Properly update
	virtual SSA form.

2012-01-30  Jakub Jelinek  <jakub@redhat.com>

	PR debug/52027
	* dwarf2out.c (dwarf2out_switch_text_section): Don't call
	set_cur_line_info_table if not emitting debug info.

	PR tree-optimization/52046
	* tree-vect-patterns.c (check_bool_pattern): Give up if
	a comparison could throw.

	PR debug/52048
	* tree-ssa-tail-merge.c (local_def): Ignore debug uses.

2012-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52045
	* tree-optimize.c (execute_cleanup_cfg_post_optimizing): Update
	SSA form if cfgcleanup did anything.

2012-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52045
	* ipa-inline-transform.c (inline_transform): Call execute_fixup_cfg
	before computing final todo.

2012-01-30  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/51528
	* tree-sra.c (sra_modify_assign): Re-factor in preparation
	for PR51528 fix.

2012-01-30  Paolo Bonzini  <bonzini@gnu.org>

	* df-problems.c (df_kill_notes): Check that the use refers
	to the note under examination.

2012-01-30  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/51920
	* config/sparc/sparc.c (vector_init_fpmerge): Remove INNER_MODE
	parameter and use short-lived pseudos.
	(vector_init_faligndata): Remove INNER_MODE parameter and use loop.
	(sparc_expand_vector_init): Const-ify local variables and adjust
	calls to above functions.

2012-01-30  Georg-Johann Lay  <avr@gjlay.de>

	* config/avr/avr.c (out_movqi_mr_r): Fix length computation.

2012-01-29  Sandra Loosemore  <sandra@codesourcery.com>

	* doc/invoke.texi: Make usage of "compile time" and
	"run time"/"runtime" consistent throughout the file.

2012-01-29  Uros Bizjak  <ubizjak@gmail.com>

	* config/alpha/alpha.c (alpha_option_overrride): Default to
	full IEEE compliance mode for Go language.

2011-01-29  Tijl Coosemans  <tijl@coosemans.org>
