@@ -1,3 +1,8 @@
+2012-01-30  Bin Cheng  <bin.cheng@arm.com>
+
+	PR target/51835
+	* gcc.target/arm/pr51835.c: New testcase.
+
 2012-01-30  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/52028
