@@ -1,3 +1,9 @@
+2012-01-30  Bin Cheng  <bin.cheng@arm.com>
+
+	PR target/51835
+	* config/arm/arm.c (arm_libcall_uses_aapcs_base): Use correct ABI
+	for __aeabi_d2iz/__aeabi_d2uiz with hard-float.
+
 2012-01-30  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/52028
